# tfm_data_science

./: librerias.txt  main.py  pyproject.toml  requirements.txt
notebooks/: 02_random_forest.ipynb  03_random_forest.ipynb
