[project]
name = "tfmdatascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fg-data-profiling",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "statsmodels>=0.14.6",
    "ydata-profiling>=4.18.4",
]

[tool.uv.sources]
fg-data-profiling = { url = "https://github.com/ydataai/ydata-profiling/archive/master.zip" }
